[shared file view] update for watermark

--- a/seahub/templates/shared_file_view_react.html
+++ b/seahub/templates/shared_file_view_react.html
@@ -60,7 +60,7 @@ body {
       fileName: '{{ file_name|escapejs }}',
       fileSize: {{ file_size }},
       rawPath: '{{ raw_path|escapejs }}',
-      sharedBy: '{{ shared_by|email2nickname }}',
+      sharedBy: '{{ shared_by|email2nickname|escapejs }}',
       siteName: '{{ site_name }}',
       enableWatermark: {% if enable_watermark %}true{% else %}false{% endif %},
       canDownload: {% if permissions.can_download %}true{% else %}false{% endif %},
