[share dialog] share link / upload link: enable user to choose expiration time
* fixup & improvement for 'share link / upload link'

--- a/seahub/templates/markdown_file_view_react.html
+++ b/seahub/templates/markdown_file_view_react.html
@@ -28,6 +28,7 @@
                   serviceUrl: '{{ serviceUrl }}',
                   isPro: '{{ is_pro }}',
                   isDocs: '{{ is_docs }}',
+                  lang: '{{ LANGUAGE_CODE }}',
                   seafileCollabServer: '{{ seafile_collab_server}}',
               },
               pageOptions: {
@@ -44,10 +45,10 @@
                   hasDraft: '{{ has_draft }}' === 'True',
                   draftFilePath: '{{ draft_file_path }}',
                   draftOriginFilePath: '{{ draft_origin_file_path }}',
-                  shareLinkPasswordMinLength: '{{ share_link_password_min_length }}',
-                  shareLinkExpireDaysDefault: '{{ share_link_expire_days_default }}',
-                  shareLinkExpireDaysMin: '{{ share_link_expire_days_min }}',
-                  shareLinkExpireDaysMax: '{{ share_link_expire_days_max }}',
+                  shareLinkPasswordMinLength: {{ share_link_password_min_length }},
+                  shareLinkExpireDaysDefault: {{ share_link_expire_days_default }},
+                  shareLinkExpireDaysMin: {{ share_link_expire_days_min }},
+                  shareLinkExpireDaysMax: {{ share_link_expire_days_max }},
                   canGenerateShareLink: {% if user.permissions.can_generate_share_link %} true {% else %} false {% endif %},
                   canSendShareLinkEmail: {% if user.permissions.can_send_share_link_mail %} true {% else %} false {% endif %},
                   isLocked: {% if file_locked %}true{% else %}false{% endif %},
