--- a/seahub/help/templates/help/encrypted_libraries.html
+++ b/seahub/help/templates/help/encrypted_libraries.html
@@ -10,7 +10,7 @@
 <p>{% trans "When creating an encrypted library:" %}
 <ul>
     <li>{% trans "If you create an encrypted library in the web app, the password is sent to the server. The server use this password to create the library. But it doesn't store the plain text password." %}</li>
-    <li>{% blocktrans %}If you create an encrypted library from a local folder with the desktop client (see <a href="{{SITE_ROOT}}help/install/">file syncing</a>), the password is not sent to the server.{% endblocktrans %}</li>
+    <li>{% blocktrans %}If you create an encrypted library from a local folder with the desktop client (see <a href="{{SITE_ROOT}}help/install_sync/">file syncing</a>), the password is not sent to the server.{% endblocktrans %}</li>
 </ul>
 </p>
 
@@ -24,6 +24,5 @@
 
 <p>{% trans "Note that encrypted library only encrypt the contents of the files, but not the folder and file names." %}</p>
 
-<p>{% blocktrans %}More technical details of encrypted library can be found at <a href="http://manual.seafile.com/security/security_features.html">Seafile Manual</a>.{% endblocktrans %}</p>
-
+<p>{% blocktrans %}More technical details of encrypted library can be found at <a href="https://manual.seafile.com/security/security_features.html">Seafile Manual</a>.{% endblocktrans %}</p>
 {% endblock %}
