--- a/seahub/templates/registration/password_change_form.html
+++ b/seahub/templates/registration/password_change_form.html
@@ -44,7 +44,7 @@ $("#id_new_password1")
 })
 .on('keyup', function() {
     var pwd = $(this).val();
-    if ($.trim(pwd)) {
+    if (pwd.trim()) {
         var level = getStrengthLevel(pwd);
         showStrength(level);
     } else {
@@ -54,9 +54,9 @@ $("#id_new_password1")
 {% endif %}
 
 $('form').on('submit', function(){
-    var old_pwd = $.trim($('input[name="old_password"]').val()),
-        pwd1 = $.trim($('input[name="new_password1"]').val()),
-        pwd2 = $.trim($('input[name="new_password2"]').val());
+    var old_pwd = $('input[name="old_password"]').val().trim(),
+        pwd1 = $('input[name="new_password1"]').val().trim(),
+        pwd2 = $('input[name="new_password2"]').val().trim();
 
     if (!old_pwd) {
         $('.error').html("{% trans "Current password cannot be blank" %}").removeClass('hide');
