--- a/seahub/templates/registration/password_set_form.html
+++ b/seahub/templates/registration/password_set_form.html
@@ -47,7 +47,7 @@ $("#id_new_password1")
 })
 .on('keyup', function() {
     var pwd = $(this).val();
-    if ($.trim(pwd)) {
+    if (pwd.trim()) {
         var level = getStrengthLevel(pwd);
         showStrength(level);
     } else {
@@ -57,8 +57,8 @@ $("#id_new_password1")
 {% endif %}
 
 $('form').on('submit', function(){
-    var pwd1 = $.trim($('input[name="new_password1"]').val()),
-        pwd2 = $.trim($('input[name="new_password2"]').val());
+    var pwd1 = $('input[name="new_password1"]').val().trim(),
+        pwd2 = $('input[name="new_password2"]').val().trim();
 
     if (!pwd1) {
         $('.error').html("{% trans "Password cannot be blank" %}").removeClass('hide');
