--- a/seahub/templates/react_app.html
+++ b/seahub/templates/react_app.html
@@ -10,7 +10,10 @@
   Object.assign(app.pageOptions, {
     shareLinkExpireDaysDefault: {{ share_link_expire_days_default }},
     shareLinkExpireDaysMin: {{ share_link_expire_days_min }},
-    shareLinkExpireDaysMax: {{ share_link_expire_days_max }}
+    shareLinkExpireDaysMax: {{ share_link_expire_days_max }},
+    uploadLinkExpireDaysDefault: {{ upload_link_expire_days_default }},
+    uploadLinkExpireDaysMin: {{ upload_link_expire_days_min }},
+    uploadLinkExpireDaysMax: {{ upload_link_expire_days_max }}
   });
 </script>
 {% render_bundle 'app' 'js' %}
