[markdown] improved 'print'
* when the right panel is open, make the print be ok
* print all the pages in Firefox

--- a/media/css/print_for_md_file_view.css
+++ b/media/css/print_for_md_file_view.css
@@ -8,3 +8,14 @@
 .editor {
   border: none!important;
 }
+.seafile-editor-main {
+  display: block!important;
+}
+.seafile-editor-main-panel {
+  display: block!important;
+  width: 100%!important;
+}
+.seafile-editor-resize,
+.seafile-editor-side-panel {
+  display: none;
+}
