--- a/seahub/templates/base_for_react.html
+++ b/seahub/templates/base_for_react.html
@@ -102,6 +102,16 @@
             repoPasswordMinLength: {{repo_password_min_length}},
             canAddPublicRepo: {% if can_add_public_repo %} true {% else %} false {% endif %},
             enableOCM: {% if enable_ocm %} true {% else %} false {% endif %},
+            ocmRemoteServers: (function () {
+              var servers = [];
+              {% for server in ocm_remote_servers %}
+              servers.push({
+                'label': '{{server.server_name|escapejs}}',
+                'value': '{{server.server_url|escapejs}}',
+              });
+              {% endfor %}
+              return servers;
+            })(),
             canInvitePeople: {% if enable_guest_invitation and user.permissions.can_invite_guest %} true {% else %} false {% endif %},
             customNavItems: {% if custom_nav_items %} JSON.parse('{{ custom_nav_items | escapejs }}') {% else %} {{'[]'}} {% endif %},
             enableShowContactEmailWhenSearchUser: {% if enable_show_contact_email_when_search_user %} true {% else %} false {% endif %},
